# cotizaciones-uy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  scrape.yml
data/: LICENSE
data/v1/: institutions.json  latest.json  schema.json
data/v1/history/: 2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
src/cotizaciones_uy/: __init__.py  __main__.py  models.py  pipeline.py  provider.py  registry.py  serialize.py
src/cotizaciones_uy/providers/: __init__.py  _http.py  _money.py  bbva.py  bcu.py  brou.py  gales.py  itau.py  matriz.py  varlix.py
tests/: conftest.py  test_bbva.py  test_bcu.py  test_brou.py  test_gales.py  test_itau.py  test_matriz.py  test_money.py  test_pipeline.py  test_schema.py  test_serialize.py  test_varlix.py
tests/fixtures/: bbva_ok.html  bcu_error.xml  bcu_ok.xml  bcu_ultimocierre.xml  brou_ok.html  gales_ok.html  itau_ok.xml  matriz_ok.html  varlix_ok.html
